sg307 fix sidebar spacing

--- a/pattern-lab/source/_patterns/03-organisms/04-containers/01-sidebar.scss
+++ b/pattern-lab/source/_patterns/03-organisms/04-containers/01-sidebar.scss
@@ -8,8 +8,11 @@
     padding: 25px;
     .field {
       &:last-child {
-        margin-bottom: 10px;
+        margin-bottom: 25px;
       }
+    }
+    .paragraph {
+      margin-bottom: 25px;
     }
   }
   .sidebar--right {
